# coinjoin-simulator

./: .gitignore  README.md  build_docs.py  daily_cost_study_results.json  enrich_mainnet_clusters.py  longrun_policy_results.json  mitigation_experiments.json  pyproject.toml  run_daily_cost_study.py  run_longrun_policy_study.py  run_mainnet_sweep.py  run_mitigation_experiments.py
.github/workflows/: pages.yml
data/: calibration_full.jsonl  calibration_smoke.jsonl  mainnet_report_v4.json  mainnet_report_v5.json  orderbook_live_snapshot.json  orderbook_snapshot.json
docs/: index.html  mainnet-deanon.html  probing-attack.html  publish_summary.json
papers/: build_figures.py  build_figures_v6.py  build_figures_v7.py  build_figures_v72.py  build_figures_v73.py  maker-clustering.md
src/coinjoin_simulator/: __init__.py  __main__.py  agents.py  anonymity.py  calibration.py  clusterer_mixdepth.py  clusterer_onchain.py  clusterer_oracle.py  (+22 more)
tests/: __init__.py  test_agents.py  test_anonymity.py  test_calibration.py  test_clusterer_mixdepth.py  test_clusterer_onchain.py  test_clusterer_oracle.py  test_clusterer_probing.py  test_clusterer_state_machine.py  test_clusterer_state_machine_stress.py  test_clusterer_v7.py  test_clusterer_v71.py  test_clusterer_v72.py  test_clusterer_v73.py  test_mainnet.py  test_mainnet_sweep.py  test_models.py  test_network.py  test_orderbook_priors.py  test_publish.py  test_publish_site.py  test_role_id.py  test_scenarios.py  test_surveillance.py  test_sybil.py  test_sybil_comparison.py  test_taker_logic.py  test_transaction.py  test_world.py
