[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coinjoin-simulator"
version = "0.1.0"
description = "Simulation framework for analyzing CoinJoin privacy and anonymity sets"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "pydantic>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "plotly>=5.0",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
coinjoin-sim = "coinjoin_simulator.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/coinjoin_simulator"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
"src/coinjoin_simulator/report.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["plotly.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
